kustomization/jenkins-setup-2.yml
apiVersion: v1
kind: Namespace
metadata:
  name: employee
