kustomization/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-backend
  labels:
    tier: backend
    app: employee-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-backend
  template:
    metadata:
      labels:
        tier: backend
        app: employee-backend
    spec:
      imagePullSecrets:
        - name: aws-registry-key
      containers:
        - name: employee-backend
          image: 911167901499.dkr.ecr.us-east-1.amazonaws.com/aws-fullstack:backend-v0.0.22-78
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 100
          resources:
            requests:
              cpu: "200m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
