kustomization/externalDNS.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns-ns
  labels:
    app.kubernetes.io/name: external-dns  
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-dns
    spec:
      serviceAccountName: external-dns-ksa
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.15.1
          args:
            - --source=service
            - --source=ingress
            - --provider=google
            - --google-zone-visibility=public
            - --registry=txt
            - --txt-owner-id=my-hostedzone-identifier
