kustomization/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-frontend
  labels:
    app: employee-frontend
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-frontend
  template:
    metadata:
      labels:
        app: employee-frontend
        tier: frontend
    spec:
      containers:
        - name: employee-frontend
          image: fadhiljr/nginxapp:employee-frontend-v0.0.20-26
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "100Mi"
              cpu: "120m"
            limits:
              memory: "150Mi"
              cpu: "200m"
