kustomization/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-backend-service
  labels:
    app: employee-backend
    tier: backend
spec:
  type: LoadBalancer
  selector:
    app: employee-backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 32245
      name: http
