kustomization/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-frontend-service
  labels:
    app: employee-frontend
    tier: frontend
  annotations:
    cloud.google.com/backend-config: '{"default": "my-backendconfig-cdn"}' 
spec:
  type: NodePort
  selector:
    app: employee-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
