kustomization/mysql-externalName-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: employeemanager.mysql.database.azure.com
