kustomization/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-mgmt-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-nginx-lb-1843944529.us-east-1.elb.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: employee-frontend-service
            port: 
              number: 80
